[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "Revisando Machine learning"
authors = ["Vicrrs <enricofermi20192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
